--- a/views/base/base.ejs
+++ b/views/base/base.ejs
@@ -84,7 +84,7 @@
                     <!-- Campo de preço -->
                     <div class="field_login">
                         <label for="appointment-price">Preço:</label>
-                        <input type="number" id="appointment-price" name="preco" step="0.01" required> <!-- Adicionando o campo de preço -->
+                        <input type="number" id="appointment-price" name="preco" step="0.01" placeholder="R$: " required> <!-- Adicionando o campo de preço -->
                     </div>
 
                     <!-- Botão para submeter o formulário -->
