--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -24,6 +24,7 @@
             <a href="/base" class="nav-link">Home</a>
             <a href="#" class="nav-link">Relatórios</a>
             <a href="#" class="nav-link">Consultas</a>
+            <a href="/listagemPaciente" class="nav-link">Listar Pacientes</a>
         </nav>
     </aside>
 
