--- a/views/base/base.ejs
+++ b/views/base/base.ejs
@@ -24,6 +24,7 @@
             <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
             <a href="#" class="nav-link">Relatórios</a>
             <a href="#" class="nav-link">Consultas</a>
+            <a href="/listagemPaciente" class="nav-link">Listar Pacientes</a>
         </nav>
     </aside>
 
