Adicionado partials e merge

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -9,24 +9,11 @@
     <script src="/js/cadastroPaciente.js" defer></script>
 </head>
 <body>
-<header id="header">
-    <h1>Patient Control</h1>
-</header>
+
+<%- include('../partials/header') %>
 
 <div class="layout">
-    <aside id="sidebar">
-        <div class="profile">
-            <img src="/img/img.png" alt="Foto de perfil de Leandro" class="profile-pic">
-            <p class="profile-name">Leandro</p>
-        </div>
-
-        <nav class="nav">
-            <a href="/base" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Relatórios</a>
-            <a href="#" class="nav-link">Consultas</a>
-            <a href="/listagemPaciente" class="nav-link">Listar Pacientes</a>
-        </nav>
-    </aside>
+    <%- include('../partials/aside') %>
 
     <div class="principal">
         <div class="container-cadastro">
