--- a/views/Home/home.ejs
+++ b/views/Home/home.ejs
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mohave:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- BASE DO SISTEMA -->
+    BASE DO SISTEMA
 
     <header class="header">
         <h2 class="titulo1">Patient Control </h2>
@@ -19,24 +19,24 @@
     </header>
     <div class="barraLateral">
         <div class="profileBackground">
-            <a href="" class="nome">    
+            <a href="" class="nome">
                 <img class="profilePic" src="../../projetoUCE%20BASE/Home/img/placeholder.jpg" alt="perfil">
                 <p class="">Tamiris</p>
             </a>
         </div>
-        
+
         <ul class="navegacao">
-            
+
             <li> <a class="navegacao1" href=""> Cadastro Paciente </a> </li>
             <li> <a class="navegacao2" href=""> Relatórios </a> </li>
             <li> <a class="navegacao3" href=""> Consultas </a> </li>
         </ul>
-     
+
     </div>
 
-   <!-- FIM DA BASE DO SISTEMA -->
+   FIM DA BASE DO SISTEMA
 
-    <!-- BOX - resumo diario -->
+    BOX - resumo diario
 
     <div class="box-resumo">
         <h3 id="resumo-dia">Resumo do dia:</h3>
@@ -57,15 +57,15 @@
         </div>
     </div>
 
-      <!-- FIM BOX RESUMO DIARIO -->
+      FIM BOX RESUMO DIARIO
 
 
-       <!-- BODY CALENDAR -->
+       BODY CALENDAR
 
     <div class="principal">
-    
 
-    </div>    
+
+    </div>
 
 </body>
 <footer>
