--- a/views/ListagemPaciente/listagemPaciente.ejs
+++ b/views/ListagemPaciente/listagemPaciente.ejs
@@ -8,24 +8,10 @@
 </head>
 <body>
 
-<header id="header">
-    <h1>Patient Control</h1>
-</header>
+<%- include('../partials/header') %>
 
 <div class="layout">
-    <aside id="sidebar">
-        <div class="profile">
-            <img src="/img/img.png" alt="Foto de perfil de Leandro" class="profile-pic">
-            <p class="profile-name">Leandro</p>
-        </div>
-
-        <nav class="nav">
-            <a href="/base" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Relatórios</a>
-            <a href="#" class="nav-link">Consultas</a>
-            <a href="/cadastroPaciente" class="nav-link">Cadastro Pacientes</a>
-        </nav>
-    </aside>
+    <%- include('../partials/aside') %>
 
     <div class="patients-list">
         <h2>Pacientes Cadastrados</h2>
