Alteração feita na estilização do header e do aside.

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Paciente - Patient Control</title>
     <link rel="stylesheet" href="/css/cadastroPaciente.css">
-    <script src="/js/cadastroPaciente.js" defer></script>
 </head>
 <body>
 
@@ -85,5 +83,7 @@
         </div>
     </div>
 </div>
+
+<script src="/js/cadastroPaciente.js"></script>
 </body>
 </html>
