--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,14 +1,26 @@
-    <aside id="sidebar">
-        <div class="profile">
-            <img src="/img/img.png" alt="Foto de perfil de Leandro" class="profile-pic">
-            <p class="profile-name">Leandro</p>
-        </div>
+<aside id="sidebar">
+    <div class="profile">
+        <img src="/img/img.png" alt="Foto de perfil de Leandro" class="profile-pic">
+        <p class="profile-name">Leandro</p>
+    </div>
 
-        <nav class="nav">
-            <a href="/base" class="nav-link">Home</a>
-            <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
-            <a href="/listagemPacientes" class="nav-link">Listagem pacientes</a>
-            <a href="#" class="nav-link">Relatórios</a>
-            <a href="#" class="nav-link">Consultas</a>
-        </nav>
-    </aside>
+    <nav class="nav">
+        <a href="/base" class="nav-link">Home</a>
+        <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
+        <a href="/listagemPaciente" class="nav-link">Listagem pacientes</a>
+        <a href="#" class="nav-link">Relatórios</a>
+        <a href="#" class="nav-link">Consultas</a>
+    </nav>
+</aside>
+
+<style>
+#sidebar {
+    background-color: white;
+    width: 250px;
+    padding: 2rem 1.5rem;
+    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+</style>
