--- a/public/css/listagemPaciente.css
+++ b/public/css/listagemPaciente.css
@@ -75,7 +75,7 @@ body {
 .patient {
     display: flex;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: white;
     padding: 1rem;
     margin-bottom: 1.5rem;
     border-radius: 8px;
