--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -7,8 +7,10 @@
         <nav class="nav">
             <a href="/base" class="nav-link">Home</a>
             <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
-            <a href="/listagemPacientes" class="nav-link">Listagem pacientes</a>
+            <a href="/listagemPacientes" class="nav-link">Listagem Pacientes</a>
+            <a href="/cadastroServicos" class="nav-link">Cadastro Procedimentos</a>
             <a href="#" class="nav-link">Relatórios</a>
             <a href="#" class="nav-link">Consultas</a>
+
         </nav>
     </aside>
