--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Paciente - Patient Control</title>
     <link rel="stylesheet" href="/css/cadastroPaciente.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=add_photo_alternate" />
 </head>
 <body>
 
@@ -16,6 +17,21 @@
     <div class="principal">
         <div class="container-cadastro">
             <form action="" class="form-cadastro">
+
+                <div class="input-group-image">
+                    <label for="image" id="drop-area">
+                        <input type="file"  name="image" accept="image/*" id="image" hidden>
+
+                        <div id="image-view">
+                            <div id="occult-input">
+                                <span class="material-symbols-outlined icon"> add_photo_alternate </span>
+                                <p>Selecione uma imagem</p>
+                            </div>
+                        </div>
+
+                    </label>
+                </div>
+
                 <div class="input-group">
                     <label for="nome">Nome:</label>
                     <input type="text" id="input-nome" name="nome" required>
@@ -74,16 +90,15 @@
                         <textarea name="medicines" id="medicines" rows="4" style="width: 97.6%;"></textarea>
                     </div>
 
-                        <div class="btn-group">
-                            <button type="reset" class="btn-cancel">Cancelar</button>
-                            <button type="submit" class="btn-save">Salvar</button>
-                        </div>
+                    <div class="btn-group">
+                        <button type="reset" class="btn-cancel">Cancelar</button>
+                        <button type="submit" class="btn-save">Salvar</button>
                     </div>
+                </div>
             </form>
         </div>
     </div>
 </div>
-
-<script src="/js/cadastroPaciente.js"></script>
+<script src="js/cadastroPaciente.js"></script>
 </body>
 </html>
