--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -16,6 +16,18 @@
     <div class="principal">
         <div class="container-cadastro">
             <form action="" class="form-cadastro">
+
+                <div class="input-group-image">
+                                    <label for="image" id="drop-area">
+                                        <input type="file"  name="image" accept="image/*" id="image" hidden>
+
+                                        <div id="image-view">
+                                            <div id="occult-input">
+                                                <span class="material-symbols-outlined icon"> add_photo_alternate </span>
+                                                <p>Selecione uma imagem</p>
+                                            </div>
+                                        </div>
+
                 <div class="input-group">
                     <label for="nome">Nome:</label>
                     <input type="text" id="input-nome" name="nome" required>
