--- a/public/css/cadastroPaciente.css
+++ b/public/css/cadastroPaciente.css
@@ -173,6 +173,91 @@ textarea {
 background-color: #2c672e;
 }
 
+/*estilizando up de imagem*/
+#drop-area {
+    width: 14vh;
+    height: 14vh;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.85);
+    text-align: center;
+    border: 1px solid rgba(93, 155, 155, 0.5);
+    border-radius: 100%;
+    margin-bottom: 2vh;
+}
+
+.input-group-image {
+    width: 100%;
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+
+}
+
+.icon {
+    margin-top: 3vh;
+}
+
+#image-view {
+    width:14vh;
+    height: 14vh;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+}
+
+
+#image-view:hover{
+    color: #2e5f5f;
+}
+
+#image{
+    display: none;
+}
+
+#occult-input p {
+    font-size: small;
+    margin-top: 1vh;
+
+}
+
+.linha-insert {
+    display: flex;
+    justify-content: space-between;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.linha-insert .input-group {
+    flex: 1;
+}
+
+.text-area-container {
+    margin-top: 2rem;
+}
+
+.text-area-container .input-group {
+    margin-bottom: 2rem;
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+}
+
+.btn-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+.btn-group {
+    display: flex;
+    gap: 1rem;
+}
+
+
+
 @media screen and (max-width: 1024px) {
     #header {
         padding: 1rem;
