Integração da tela de serviços.

--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -7,9 +7,8 @@
     <nav class="nav">
         <a href="/base" class="nav-link">Home</a>
         <a href="/cadastroPaciente" class="nav-link">Cadastro Paciente</a>
-        <a href="/listagemPaciente" class="nav-link">Listagem pacientes</a>
-        <a href="#" class="nav-link">Relatórios</a>
-        <a href="#" class="nav-link">Consultas</a>
+        <a href="/listagemPaciente" class="nav-link">Listagem Pacientes</a>
+        <a href="/cadastroServicos" class="nav-link">Cadastro Serviços</a>
     </nav>
 </aside>
 
