Adicionado import de imagem no usuário.

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -16,11 +16,11 @@
 
     <div class="principal">
         <div class="container-cadastro">
-            <form action="" class="form-cadastro">
+            <form action="" class="form-cadastro" enctype="multipart/form-data">
 
                 <div class="input-group-image">
                     <label for="image" id="drop-area">
-                        <input type="file"  name="image" accept="image/*" id="image" hidden>
+                        <input type="file" name="image" accept="image/*" id="image" hidden>
 
                         <div id="image-view">
                             <div id="occult-input">
