Estilização das pop-up de cadastro de pacientes.

--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -92,7 +92,7 @@
 
                     <div class="btn-group">
                         <button type="reset" class="btn-cancel">Cancelar</button>
-                        <button type="submit" class="btn-save">Salvar</button>
+                        <button type="submit" class="btn-save">Cadastrar</button>
                     </div>
                 </div>
             </form>
