--- a/public/css/cadastroPaciente.css
+++ b/public/css/cadastroPaciente.css
@@ -219,6 +219,26 @@ textarea {
 background-color: #2c672e;
 }
 
+.popup {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    color: white;
+    font-size: 16px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    z-index: 1000;
+}
+
+/* Aparece e desaparece suavemente */
+.popup.show {
+    opacity: 1;
+}
+
 @media screen and (max-width: 1024px) {
     #header {
         padding: 1rem;
