--- a/views/CadastroPaciente/cadastroPaciente.ejs
+++ b/views/CadastroPaciente/cadastroPaciente.ejs
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="btn-group">
-                        <button type="reset" class="btn-cancel">Cancelar</button>
+                        <button type="reset" class="btn-cancel" id="btn-cancel">Cancelar</button>
                         <button type="submit" class="btn-save">Salvar</button>
                     </div>
                 </div>
