--- a/views/ListagemPaciente/listagemPaciente.ejs
+++ b/views/ListagemPaciente/listagemPaciente.ejs
@@ -16,21 +16,11 @@
     <div class="patients-list">
         <h2>Pacientes Cadastrados</h2>
 
-        <div class="patient">
-            <img src="/img/img.png" alt="Foto de Sônia" class="patient-pic">
-            <div class="patient-info">
-                <p><strong>Sonia Rodrigues</strong> | 58a</p>
-                <p>Registrada desde 06/24 | última consulta em: 28/03/24</p>
-            </div>
-            <div class="patient-actions">
-                <button id="btn-access" class="btn">Acessar Relatórios</button>
-                <button id="btn-edit" class="btn">Editar</button>
-                <button id="btn-delete" class="btn">Excluir</button>
-            </div>
-        </div>
+        <div id="patient-container"></div>
     </div>
 </div>
 
+<script src="/js/listagemPaciente.js"></script>
 <script src="/js/base.js"></script>
 </body>
 </html>
